--- a/PolymorphismSamples/PolymorphismSamples/PolymorphismSamples.csproj
+++ b/PolymorphismSamples/PolymorphismSamples/PolymorphismSamples.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
+    <Compile Include="Cat.cs" />
     <Compile Include="Dog.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
