--- a/PolymorphismSamples/PolymorphismSamples/PolymorphismSamples.csproj
+++ b/PolymorphismSamples/PolymorphismSamples/PolymorphismSamples.csproj
@@ -50,16 +50,16 @@
     <Compile Include="Bird.cs" />
     <Compile Include="Cat.cs" />
     <Compile Include="Dog.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormCookie.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormCookie.Designer.cs">
+      <DependentUpon>FormCookie.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormCookie.resx">
+      <DependentUpon>FormCookie.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
